Fix description background overlapping post shadow when there’s no title

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -177,7 +177,7 @@
         border-radius: 10px;
         // border: 2px solid #333;
       }
-      .post-title { background: none; }
+      .post-title, .post-description { background: none; }
     }
 
   }
